# ImageProcessing

./: .gitignore  CMakeLists.txt
cmake/: find_dependencies.cmake
demo/: CMakeLists.txt  common.h  demo_pixel.cpp  demo_tpcsltp.cpp  mixup.cpp
script/: download_image.py
src/: CMakeLists.txt  image_processing.h
src/ip/: colorspace.cpp  edgedetect.cpp  feature.cpp  kernel.cpp
src/ip/util/: math_function.h
test/: CMakeLists.txt  common.h  test_colorspace.cpp  test_util.cpp
web/node/: app.js  package.json
web/node/public/javascripts/: clbp.js  common.js  csltp.js  feature-extraction.js  lbp-main.js  lbp.js  ldp-main.js  ldp-pattern1.js  ldp-pattern2.js  ldp-pattern3.js  ldp-pattern4.js  ldp-pattern5.js  ldp-pattern6.js  ldp-pattern7.js  ldp-pattern8.js  ltp-main.js  ltp.js  lzp-main.js  lzp-pattern1.js  lzp-pattern2.js  rgb2YCbCr.js  rgb2color-main.js  rgb2gray.js  rgb2hsv.js  tlbp.js  tplbp.js  tpltp.js  tplzp.js
web/node/public/stylesheets/: image_processing.css  image_processing.css.map  image_processing.sass
web/node/routes/: image_processing.js  index.js
web/node/views/: canny.jade  image_processing.jade  image_processing_layout.jade  laplacian.jade  layout.jade  lbp.jade  ldp.jade  ltp.jade  lzp.jade  rgb2color.jade  sobel.jade
